formula.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = function(f) { return f; },
        peg$c2 = "#",
        peg$c3 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c4 = /^[HSCDP]/i,
        peg$c5 = { type: "class", value: "[HSCDP]i", description: "[HSCDP]i" },
        peg$c6 = function(f, a) { return { t: 'o', f: f.toUpperCase(), a: a }; },
        peg$c7 = ".",
        peg$c8 = { type: "literal", value: ".", description: "\".\"" },
        peg$c9 = function(v) { return v; },
        peg$c10 = "(",
        peg$c11 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c12 = ")",
        peg$c13 = { type: "literal", value: ")", description: "\")\"" },
        peg$c14 = "[",
        peg$c15 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c16 = "]",
        peg$c17 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c18 = function(q, v, a) { return { t: q, f: v.a, a: a }; },
        peg$c19 = /^[A\u2200]/,
        peg$c20 = { type: "class", value: "[A\\u2200]", description: "[A\\u2200]" },
        peg$c21 = function() { return 'A'; },
        peg$c22 = /^[E\u2203]/,
        peg$c23 = { type: "class", value: "[E\\u2203]", description: "[E\\u2203]" },
        peg$c24 = function() { return 'E'; },
        peg$c25 = function(s) { return s; },
        peg$c26 = "{",
        peg$c27 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c28 = "}",
        peg$c29 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c30 = function(name, params) { return { f: name, a: params }; },
        peg$c31 = [],
        peg$c32 = ",",
        peg$c33 = { type: "literal", value: ",", description: "\",\"" },
        peg$c34 = function(a, b) { return [a].concat(b); },
        peg$c35 = function(chain) {
        		var op = chain[0]; chain = chain[1];
        		var head = chain[0];
        		for(var i=1; i<chain.length; ++i)
        			head = { f: op, a: [head, chain[i]] };
        		return head;
        	},
        peg$c36 = function(a, operator, b) { return { f: operator, a: [a,b] }; },
        peg$c37 = function(b) { return b; },
        peg$c38 = function(a, chain) { return ['and', [a].concat(chain)]; },
        peg$c39 = function(a, chain) { return ['or', [a].concat(chain)]; },
        peg$c40 = function(a, chain) { return ['+', [a].concat(chain)]; },
        peg$c41 = function(a, chain) { return ['*', [a].concat(chain)]; },
        peg$c42 = /^[<>]/,
        peg$c43 = { type: "class", value: "[<>]", description: "[<>]" },
        peg$c44 = "->",
        peg$c45 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c46 = "=>",
        peg$c47 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c48 = "\u2192",
        peg$c49 = { type: "literal", value: "\u2192", description: "\"\\u2192\"" },
        peg$c50 = function() { return '->'; },
        peg$c51 = "<->",
        peg$c52 = { type: "literal", value: "<->", description: "\"<->\"" },
        peg$c53 = "<=>",
        peg$c54 = { type: "literal", value: "<=>", description: "\"<=>\"" },
        peg$c55 = "\u2261",
        peg$c56 = { type: "literal", value: "\u2261", description: "\"\\u2261\"" },
        peg$c57 = "\u2194",
        peg$c58 = { type: "literal", value: "\u2194", description: "\"\\u2194\"" },
        peg$c59 = function() { return '<->'; },
        peg$c60 = "\u2262",
        peg$c61 = { type: "literal", value: "\u2262", description: "\"\\u2262\"" },
        peg$c62 = "\u22BB",
        peg$c63 = { type: "literal", value: "\u22BB", description: "\"\\u22BB\"" },
        peg$c64 = " xor ",
        peg$c65 = { type: "literal", value: " xor ", description: "\" xor \"" },
        peg$c66 = function() { return 'xor'; },
        peg$c67 = ">=",
        peg$c68 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c69 = "\u2265",
        peg$c70 = { type: "literal", value: "\u2265", description: "\"\\u2265\"" },
        peg$c71 = function() { return '>='; },
        peg$c72 = "<=",
        peg$c73 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c74 = "\u2264",
        peg$c75 = { type: "literal", value: "\u2264", description: "\"\\u2264\"" },
        peg$c76 = function() { return '<='; },
        peg$c77 = "==",
        peg$c78 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c79 = "=",
        peg$c80 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c81 = function() { return '='; },
        peg$c82 = "!=",
        peg$c83 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c84 = "~=",
        peg$c85 = { type: "literal", value: "~=", description: "\"~=\"" },
        peg$c86 = "<>",
        peg$c87 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c88 = "\u2260",
        peg$c89 = { type: "literal", value: "\u2260", description: "\"\\u2260\"" },
        peg$c90 = function() { return '!='; },
        peg$c91 = "&&",
        peg$c92 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c93 = "&",
        peg$c94 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c95 = "and ",
        peg$c96 = { type: "literal", value: "and ", description: "\"and \"" },
        peg$c97 = "\u2227",
        peg$c98 = { type: "literal", value: "\u2227", description: "\"\\u2227\"" },
        peg$c99 = function() { return 'and'; },
        peg$c100 = "||",
        peg$c101 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c102 = "|",
        peg$c103 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c104 = "or ",
        peg$c105 = { type: "literal", value: "or ", description: "\"or \"" },
        peg$c106 = "\u2228",
        peg$c107 = { type: "literal", value: "\u2228", description: "\"\\u2228\"" },
        peg$c108 = function() { return 'or'; },
        peg$c109 = /^[+\uFE62\uFF0B]/,
        peg$c110 = { type: "class", value: "[+\\uFE62\\uFF0B]", description: "[+\\uFE62\\uFF0B]" },
        peg$c111 = function() { return '+'; },
        peg$c112 = /^[\-\u02D7\u2212\uFF0D\u2010\u2012\u2013\u2014\u2015\u2796]/,
        peg$c113 = { type: "class", value: "[\\-\\u02D7\\u2212\\uFF0D\\u2010\\u2012\\u2013\\u2014\\u2015\\u2796]", description: "[\\-\\u02D7\\u2212\\uFF0D\\u2010\\u2012\\u2013\\u2014\\u2015\\u2796]" },
        peg$c114 = function() { return '-'; },
        peg$c115 = /^[\xD7*\u2219\xB7\u22C5]/,
        peg$c116 = { type: "class", value: "[\\xD7*\\u2219\\xB7\\u22C5]", description: "[\\xD7*\\u2219\\xB7\\u22C5]" },
        peg$c117 = function() { return '*'; },
        peg$c118 = /^[\xF7\/:\u2215\u2044\u2797]/,
        peg$c119 = { type: "class", value: "[\\xF7\\/:\\u2215\\u2044\\u2797]", description: "[\\xF7\\/:\\u2215\\u2044\\u2797]" },
        peg$c120 = function() { return '/'; },
        peg$c121 = "^",
        peg$c122 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c123 = "**",
        peg$c124 = { type: "literal", value: "**", description: "\"**\"" },
        peg$c125 = function() { return 'pow'; },
        peg$c126 = function(operator, a) { return { f: operator, a: [a] }; },
        peg$c127 = /^[!\xAC~]/,
        peg$c128 = { type: "class", value: "[!\\xAC~]", description: "[!\\xAC~]" },
        peg$c129 = "not",
        peg$c130 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c131 = void 0,
        peg$c132 = /^[ ({]/,
        peg$c133 = { type: "class", value: "[ ({]", description: "[ ({]" },
        peg$c134 = function() { return '~'; },
        peg$c135 = /^[+\-]/,
        peg$c136 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c137 = null,
        peg$c138 = function(variable) { return { t: 'v', a: variable }; },
        peg$c139 = function(constant) { return { t: 'c', a: constant }; },
        peg$c140 = /^[a-z]/i,
        peg$c141 = { type: "class", value: "[a-z]i", description: "[a-z]i" },
        peg$c142 = /^[a-z0-9_]/,
        peg$c143 = { type: "class", value: "[a-z0-9_]", description: "[a-z0-9_]" },
        peg$c144 = /^[0-9]/,
        peg$c145 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c146 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c147 = "\"",
        peg$c148 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c149 = /^[^"]/,
        peg$c150 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c151 = "'",
        peg$c152 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c153 = /^[^']/,
        peg$c154 = { type: "class", value: "[^']", description: "[^']" },
        peg$c155 = function(s) { return s[1]; },
        peg$c156 = " ",
        peg$c157 = { type: "literal", value: " ", description: "\" \"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsesp();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseoperacja();
        if (s2 === peg$FAILED) {
          s2 = peg$parseformula();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsesp();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseoperacja() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c2;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        if (peg$c4.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsesp();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsenawias();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c6(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseformula() {
      var s0;

      s0 = peg$parsequantifier();
      if (s0 === peg$FAILED) {
        s0 = peg$parsebinary();
        if (s0 === peg$FAILED) {
          s0 = peg$parsenonbinary();
        }
      }

      return s0;
    }

    function peg$parsequantifier() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parsequantifierSymbol();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesp();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parsevariable();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsesp();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 46) {
                s6 = peg$c7;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
              if (s6 !== peg$FAILED) {
                peg$reportedPos = s3;
                s4 = peg$c9(s4);
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 40) {
              s4 = peg$c10;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsesp();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsevariable();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsesp();
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s8 = peg$c12;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c13); }
                    }
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s3;
                      s4 = peg$c9(s6);
                      s3 = s4;
                    } else {
                      peg$currPos = s3;
                      s3 = peg$c0;
                    }
                  } else {
                    peg$currPos = s3;
                    s3 = peg$c0;
                  }
                } else {
                  peg$currPos = s3;
                  s3 = peg$c0;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
            if (s3 === peg$FAILED) {
              s3 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 91) {
                s4 = peg$c14;
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c15); }
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parsesp();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parsevariable();
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parsesp();
                    if (s7 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 93) {
                        s8 = peg$c16;
                        peg$currPos++;
                      } else {
                        s8 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c17); }
                      }
                      if (s8 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c9(s6);
                        s3 = s4;
                      } else {
                        peg$currPos = s3;
                        s3 = peg$c0;
                      }
                    } else {
                      peg$currPos = s3;
                      s3 = peg$c0;
                    }
                  } else {
                    peg$currPos = s3;
                    s3 = peg$c0;
                  }
                } else {
                  peg$currPos = s3;
                  s3 = peg$c0;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsesp();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseqnonbinary();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c18(s1, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsequantifierSymbol() {
      var s0, s1;

      s0 = peg$currPos;
      if (peg$c19.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c21();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (peg$c22.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c24();
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parsenonbinary() {
      var s0;

      s0 = peg$parsefunctor();
      if (s0 === peg$FAILED) {
        s0 = peg$parsenawias();
        if (s0 === peg$FAILED) {
          s0 = peg$parseunary();
          if (s0 === peg$FAILED) {
            s0 = peg$parseconstant();
            if (s0 === peg$FAILED) {
              s0 = peg$parsevariable();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseqnonbinary() {
      var s0;

      s0 = peg$parsequantifier();
      if (s0 === peg$FAILED) {
        s0 = peg$parsenonbinary();
      }

      return s0;
    }

    function peg$parsenawias() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c10;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseformula();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsesp();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c12;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c13); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c25(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 123) {
          s1 = peg$c26;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c27); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsesp();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseformula();
            if (s3 !== peg$FAILED) {
              s4 = peg$parsesp();
              if (s4 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 125) {
                  s5 = peg$c28;
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c29); }
                }
                if (s5 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c25(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parsefunctor() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parselabel();
      if (s2 !== peg$FAILED) {
        s2 = input.substring(s1, peg$currPos);
      }
      s1 = s2;
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesp();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 40) {
            s3 = peg$c10;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsesp();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseparams();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsesp();
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 41) {
                    s7 = peg$c12;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c13); }
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c30(s1, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseparams() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseformula();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 44) {
          s4 = peg$c32;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c33); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsesp();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseformula();
            if (s6 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c1(s6);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c0;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 44) {
            s4 = peg$c32;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c33); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsesp();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseformula();
              if (s6 !== peg$FAILED) {
                peg$reportedPos = s3;
                s4 = peg$c1(s6);
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c34(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsebinary() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsebinaryChain();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c35(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseqnonbinary();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsesp();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseoperator();
            if (s3 !== peg$FAILED) {
              s4 = peg$parsesp();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseqnonbinary();
                if (s5 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c36(s1, s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parsebinaryChain() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
